--- a/sesi suzano - licao/css/estilo.css
+++ b/sesi suzano - licao/css/estilo.css
@@ -17,7 +17,7 @@ body {
 }
 
 header {
-    background-color: #F9003D;
+    background-color: #f90000;
     height: 80px;
     position: fixed;
     width: 100vw;
@@ -111,7 +111,7 @@ h1 {
 
 .titulo-senai {
     font-family: 'Courier New', Courier, monospace;
-    color: #F9003D;
+    color: #f90000;
     font-size: 50px;
     text-transform: uppercase;
     font-weight: 600;
@@ -128,7 +128,7 @@ h1 {
 }
 
 .sobre-projetos h2 {
-    color: #F9003D;
+    color: #f90000;
     font-size: 50px;
     font-weight: 500;
     margin-bottom: 40px;
@@ -240,7 +240,7 @@ h1 {
 
 footer {
     height: 80px;
-    background-color: #F9003D;
+    background-color: #f90000;
     color: white;
     display: flex;
     justify-content: center;
